# intermol

./: LICENSE  README.md  pyproject.toml  requirements.txt
intermol/interp/: batch_cfFP.py  batch_cfFP_analysis.py  batch_fp.py  batch_fp_analysis.py  build_utils.py  causal_intervention.py  compute_acts.py  concept_fp.py  concept_fp_utils.py  describe_sae.py  eval.py  eval_utils.py  label_utils.py  molecular_concepts.py  profile_latents.py  smiles_editor.py  utils.py
intermol/main/: config.py  data_utils.py  inference.py  normalize.py  sae.py  sae_module.py  train.py  utils.py
notebooks/: activation_dist.ipynb  logit_lens.ipynb  probe_latents.ipynb
scripts/: run_eval_concepts.py  run_precomp_acts.py
