[project]
name = "intermol"
version = "0.1.0"
description = "Mechanistic interpretability tools for chemical language models"
dependencies = [
  "h5py>=3.11",
  "msgpack",
  "numpy>=2",
  "polars",
  "pytorch-lightning",
  "rdkit>=2022.09.1",
  "scipy>=1.13",
  "torch>=2.2",
  "tqdm",
  "transformers"
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["intermol"]