[project]
name = "intermol"
version = "0.1.0"
description = "A mechanistic interpretability toolbox for chemical language models"
authors = [{ name = "Christian Kenneth", email = "kennethasikinnn@gmail.com" }]
dependencies = [
  "h5py>=3.11",
  "numba",
  "numpy>=2",
  "polars",
  "pytorch-lightning",
  "rdkit>=2022.09.1",
  "scikit-learn",
  "scipy",
  "torch>=2.2",
  "tqdm",
  "transformers<5"
]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/ckennetha/intermol"

[project.scripts]
run-eval-concepts = "scripts.run_eval_concepts:main"
run-precomp-acts = "scripts.run_precomp_acts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.hatch.build.targets.wheel]
packages = ["intermol", "scripts"]